	of the focused window via menus and keybindings.

	Example:
	"Down"     = c|s: all           : f.changesize "bottom +10"

   33 - f.changesize bugfix and improvement (by Dan 'dl' Lilliehorn)

	Fixes focusproblems with f.changesize and adds the ability to set
	a new fixed size of a window.

	Example:
	"F1"       = c|s: all           : f.changesize "640x480"

   34 - When crashing, ctwm now refers to ctwm-bugs@free.lp.se instead of
	Claude.Lecommandeur@epfl.ch.

   35 - Changed all the code to use ANSI C prototypes instead of the old
	K&R style.
	[Richard Levitte]

   36 - Only use the DefaultFunction if no function was found.
	[Richard Levitte]

   37 - Correct DontMoveOff

	The DontMoveOff checks when calculating random placement
	wasn't satisfactory.  It ended up placing all windows that
	were small enough to fit in a random place at +50+50 with no
	exception.  The behavior has now been changed to only apply
	to very large windows (almost as large as or larger than the
	screen).  At the same time, the RandomPlacement algorithm and
	the DonMoveOff checks have been tweaked to keep the title
	height in mind, so centering and coordinates correspond to the
	realities of the rest of CTWM.
	[Richard Levitte]

   38 - Correct resizing from menu

	Choosing resize from the menu when not having 3D borders moved
	the target window down and right by a border width.  This was
	an error in window position calculations.
	[Richard Levitte]

   39 - Enhanced info window

	Added the outer geometry.  Added the 3D border width.
	[Richard Levitte]

   40 - Restart on subsequent SIGHUPs

	Reworked the code that catches a SIGHUP and has ctwm restart as
	a result.  The restarting code has moved from Restart() to the new
	DoRestart().  Restart() now only sets a flag, and CtwmNextEvent()
	has been changed to react to that flag and call DoRestart().  From
	now on, CtwmNextEvent() is always used to get the next event, even
	when no animations are going on.
	[Richard Levitte]