@@ -175,11 +175,14 @@ void AllocateOthersIconManagers (void);
 void ChangeOccupation (TwmWindow *tmp_win, int newoccupation);
 void WmgrRedoOccupation (TwmWindow *win);
 void WMgrRemoveFromCurrentWorkSpace (virtualScreen *vs, TwmWindow *win);
+#ifdef VMS /* Because that name is longer than 31 characters */
+#define WMgrAddToCurrentWorkSpaceAndWarp WMgrAddToCurrWorkSpaceAndWarp
+#endif
 void WMgrAddToCurrentWorkSpaceAndWarp (virtualScreen *vs, char *winname);
 void WMgrHandleExposeEvent (virtualScreen *vs, XEvent *event);
 void PaintWorkSpaceManager (virtualScreen *vs);
 void PaintOccupyWindow (void);
-unsigned int GetMaskFromProperty (char *prop, unsigned long len);
+unsigned int GetMaskFromProperty (unsigned char *prop, unsigned long len);
 void AddToClientsList (char *workspace, char *client);
 void WMapToggleState (virtualScreen *vs);
 void WMapSetMapState (virtualScreen *vs);
